--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Day 3 - Responsive Web Coding</title>
+    <title>Day 3 - Responsive Web Development</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
